--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+.app{
+  margin: 0px auto;
+}
+
+.div-formulario{
+  margin-top: 40px;
+}
+
+.div-formulario h2{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.div-formulario form{
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+form input[type="text"],
+form select,
+form textarea{
+  display: block;
+  margin: 10px;
+  padding: 5px;
+  min-width: 250px;
+  max-width: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form select{
+  min-width: 263px;
+  max-width: 263px;
+}
+
+form input[type="submit"],
+form button{
+  display: block;
+  float: left;
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: green;
+  color: #fff;
+  border: 1px solid #444;
+  border-radius: 5px;
+}
+
+form input[type="submit"]:hover,
+form button:hover{
+  transition: all 300ms;
+  background-color: #ccc;
+  color: #fff;
 }
